Create emmy-common module